# Hyper-Spherical-Markup-Language-SDT-distro

./: ARCHITECTURE_CPP_MIGRATION.md  CLAUDE.md  CORRECTED_PHILOSOPHY.md  HSML_ARCHITECTURE_V2.md  LICENSE  PROJECT_GOALS_HSML_SDT.md  REVIEW_REPORT.md  SDT_REVIEW_REPORT.md  SPHERICAL_FOUNDATION_PHILOSOPHY.md  VALIDATION_QUICK_START.md  ZERO_FREE_IMPLEMENTATION_SUMMARY.md
cpp/: CMakeLists.txt  HSML_LANGUAGE_SPEC.md
cpp/.claude/: settings.local.json
cpp/backups/BACKUP_20252408_2226/include/hsml/: hsml.cpp  namespace_bridge.cpp  spherical_purity_guard.cpp
cpp/backups/BACKUP_20252408_2226/include/hsml/browser/: dev_tools_interface.cpp  javascript_engine.cpp  navigation_manager.cpp  p0rt3r_browser_engine.cpp  p0rt3r_engine.cpp  p0rt4l5_development_framework.cpp  spatial_document_parser.cpp  spatial_layout_engine.cpp  spatial_navigation.cpp
cpp/backups/BACKUP_20252408_2226/include/hsml/c/: hsml_c.cpp
cpp/backups/BACKUP_20252408_2226/include/hsml/cache/: hacktivist_cache_system.cpp  simple_cache_system.cpp
cpp/backups/BACKUP_20252408_2226/include/hsml/codegen/: hsml_code_generator.cpp
cpp/backups/BACKUP_20252408_2226/include/hsml/compute/: compressed_cache_manager.cpp  gpu_cache_manager.cpp  gpu_memory_manager.cpp  heterogeneous_compute.cpp  heterogeneous_compute_engine.cpp  lockfree_cache_manager.cpp  mmap_cache_manager.cpp  persistent_cache_manager.cpp  unified_cache_system.cpp
cpp/backups/BACKUP_20252408_2226/include/hsml/concurrency/: lockfree_rendering_pipeline.cpp
cpp/backups/BACKUP_20252408_2226/include/hsml/core/: HSML_refactored_modern_cpp.cpp  HSML_refactored_performance.cpp  advanced_concepts.cpp  advanced_solid_angle_processor.cpp  bubble.cpp  code_generator.cpp  cognitive_integration_coordinator.cpp  color.cpp  compensation_solver.cpp  constexpr_solid_angle_engine.cpp  debug_logger.cpp  fractal_spherical_harmonics.cpp  hcs21_state_vector.cpp  hps21.cpp  hsml_dom.cpp  mathematical_foundation.cpp  matrix4.cpp  object_factory.cpp  object_registry.cpp  performance_monitor.cpp  precision_constants.cpp  (+18 more)
cpp/backups/BACKUP_20252408_2226/src/: 3d_gui_demo.cpp  clean_architecture_demo.cpp  cross_platform_demo.cpp  main.cpp  perfect_3d_gui_demo.cpp  perfect_architecture_test.cpp  test_clean_architecture.cpp  test_critical_fixes.cpp
cpp/backups/BACKUP_20252408_2226/src/api/: api_architecture.cpp  hsml_c_api.cpp
cpp/backups/BACKUP_20252408_2226/src/browser/: hot_spot_manager.cpp  hsml_development_accelerator.cpp  p0rt3r_browser_demo.cpp  p0rt3r_engine.cpp  p0rt3r_testing_framework.cpp  p0rt4l5_comprehensive_test_suite.cpp  p0rt4l5_development_framework.cpp  p0rt4l5_qt_opengl_integration.cpp  spatial_navigation.cpp  steradian_recalculation_engine.cpp
cpp/backups/BACKUP_20252408_2226/src/codegen/: hsml_code_generator.cpp
cpp/backups/BACKUP_20252408_2226/src/core/: bubble.cpp  cognitive_integration_coordinator.cpp  compensation_solver.cpp  constexpr_solid_angle.cpp  constexpr_spherical_coords.cpp  csss_engine.cpp  debug.cpp  debug_logger.cpp  fractal_harmonic_renderer.cpp  fractal_spherical_harmonics.cpp  hcs21_state_vector.cpp  hps21.cpp  hsml-dom.cpp  hsml_engine.cpp  integration.cpp  object_factory.cpp  object_registry.cpp  presence.cpp  production_compensation_solver.cpp  runtime_optimization_engine.cpp  sdt_core.cpp  sdt_framework.cpp  sdt_state_integrator.cpp  solid_angle_dom_processor.cpp  spatial_indexer.cpp  spherical_coordinate_processor.cpp  spherical_physics_engine.cpp  spherical_som.cpp  spherical_wave_engine.cpp  ssml_som.cpp  state_tensor.cpp  wave_simd_acceleration.cpp
cpp/backups/BACKUP_20252408_2226/src/gui/: CMakeLists.txt  consciousness_driven_layout.cpp  fluid_spatial_interface.cpp  fractal_ball_interface.cpp  hsml_visual_studio_gui.cpp  hsml_visual_studio_main.cpp  imgui_layer.cpp  main_window.cpp  port3r_studio_system.cpp  sdt_earth_demo.cpp  spatial_ai_entities.cpp  spatial_audio_system.cpp  spatial_interface_system.cpp  testing_framework_ui.cpp
cpp/backups/BACKUP_20252408_2226/src/ir/: hsml_ir.cpp
cpp/backups/BACKUP_20252408_2226/src/language/: code_generator.cpp  hsml_ir.cpp  hsml_lexer.cpp
cpp/backups/BACKUP_20252408_2226/src/monitoring/: CMakeLists.txt  performance_monitor_demo.cpp
cpp/backups/BACKUP_20252408_2226/src/parsers/: hsml_lexer.cpp  hsml_parser.cpp  hsml_semantic_analyzer.cpp
cpp/backups/BACKUP_20252408_2226/src/physics/: HCS-21.py.rev  HPS-1-1-1.py.rev  neural_particle_network.cpp  quantum_field_theory.cpp  sdt_electromagnetic.cpp  sdt_gravity.cpp  sdt_particle_physics.cpp  spherical_physics_engine.cpp
cpp/backups/BACKUP_20252408_2226/src/rendering/: concurrent_spherical_renderer.cpp  opengl_renderer.cpp  renderer_base.cpp  renderer_interface.cpp  software_renderer.cpp  spherical_renderer.cpp
cpp/backups/BACKUP_20252408_2226/src/spatial_computing/: consciousness_spatial_system.cpp
cpp/backups/BACKUP_20252408_2226/src/testing/: cognitive_integration_validator.cpp  comprehensive_spatial_validator.cpp  hsml-testing-framework.cpp  hsml_testing_framework.cpp
cpp/backups/BACKUP_20252408_2226/src/unified/: console_demo.cpp  integrated_system.cpp
cpp/cmake/: HSMLConfig.cmake.in
cpp/examples/: basic_scene.hsml
cpp/include/hsml/api/: runtime.h  runtime.hpp
cpp/include/hsml/core/: spherical_types.hpp
cpp/include/hsml/parser/: hsml_lexer.hpp  tokens.hpp
cpp/include/hsml/physics/: sdt_constants.hpp  sdt_engine.hpp  sdt_entity.hpp  sdt_field.hpp
cpp/include/hsml/viewport/: steradian_viewport.hpp
cpp/src/core/: spherical_math.cpp  state_21d.cpp
cpp/src/parser/: hsml_lexer.cpp  hsml_parser.cpp
cpp/src/physics/: sdt_engine.cpp  sdt_entity.cpp  sdt_field.cpp
cpp/src/render/: cpu_backend.cpp  spherical_renderer.cpp  webgl_backend.cpp  webgpu_backend.cpp
cpp/src/runtime/: cli.cpp  dev_server.cpp  gateway.cpp  main.cpp
cpp/src/viewport/: steradian_viewport.cpp
cpp/tests/: parser_tests.cpp  physics_safety_tests.cpp  runtime_gateway_tests.cpp  sdt_engine_tests.cpp  sdt_physics_test.cpp  spherical_math_tests.cpp  viewport_tests.cpp
portal/: CMakeLists.txt  README.md
portal/examples/: basic_client.cpp
(+155 files in other folders)
